--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://gvn22.github.io'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
-theme = 'hallo'
+title = 'Girish Nivarti'
+theme = 'bwlp'
