--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -11,13 +11,14 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          submodules: true 
-          fetch-depth: 1   
+          submodules: true
+          fetch-depth: 1
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: 'latest'
+          extended: true
 
       - name: Build
         run: hugo
